--- a/Hotel Website/index.html
+++ b/Hotel Website/index.html
@@ -50,7 +50,7 @@
         <div class="box bg-primary">
             <i class="fas fa-utensils fa-3x"></i>
             <h3>Free Meals</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quas?</p>
+            <p>Lorem ipum dolor sit amet consectetur adipisicing elit. Quos, quas?</p>
        
         </div>
          <div class="box bg-light">
